Fix bug in z-index property at header.css

--- a/frontend/src/main/resources/styles/header.css
+++ b/frontend/src/main/resources/styles/header.css
@@ -19,6 +19,7 @@ header #top .title {
   font-family: 'Poppins';
   font-style: normal;
   position: absolute;
+  z-index: -1;
   font-weight: 700;
   font-size: 40px;
   line-height: 72px;
